--- a/.env.example
+++ b/.env.example
@@ -52,3 +52,4 @@ MIX_PUSHER_APP_KEY="${PUSHER_APP_KEY}"
 MIX_PUSHER_APP_CLUSTER="${PUSHER_APP_CLUSTER}"
 
 FILESYSTEM_DRIVER=public
+FCM_SERVER_KEY=AAAA1EmfY8M:APA91bHVoS-DFrLj2jfSvjVquXzr_hbGrOosZm3HeNne4FW5fbMTp-DbJi-ymxKPizq4pVQOo-6Z4plS-a3pDTJuKW1YEBnwPNgKFQYZNKUk_iNKJ0aLGhUMtPi3Cr_8TVLRTjPZZZpx
